(7.3) - (---) - Visibility fixes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -215,7 +215,8 @@ form{
 
 input[type="text"],
 input[type="password"],
-input[type="email"]
+input[type="email"],
+select
 {
     width:100%;
     border:1px solid #ccc;
